unpackaged/main/default/objects/AR_Customer_Info__c/AR_Customer_Info__c.object-meta.xml
<CustomObject>
    <label>AR Customer Info</label>
    <nameField>
        <label>AR Customer Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR Customer Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>