unpackaged/main/default/objects/AR_Customer_Info__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AR Customer Info</relationshipLabel>
    <relationshipName>AR_Customer_Info</relationshipName>
    <type>Lookup</type>
</CustomField>