unpackaged/main/default/objects/AR_Customer_Info__c/fields/AR_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>AR_Customer_Number__c</fullName>
    <label>AR Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>