unpackaged/main/default/objects/AR_Customer_Info__c/fields/Deleted_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Account_Id__c</fullName>
    <label>Deleted Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>