unpackaged/main/default/objects/AR_Customer_Info__c/fields/Deleted_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deleted Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AR_Customer_Info</relationshipName>
    <type>Lookup</type>
</CustomField>