unpackaged/main/default/objects/AR_Customer_Info__c/fields/GBMS_ID__c.field-meta.xml
<CustomField>
    <fullName>GBMS_ID__c</fullName>
    <label>GBMS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>