unpackaged/main/default/objects/AR_Customer_Info__c/fields/Master_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Account_Name__c</fullName>
    <formula>Account__r.Name</formula>
    <label>Master Account Name</label>
    <type>Text</type>
</CustomField>