unpackaged/main/default/objects/AR_Customer_Info__c/fields/Oracle_AR_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_AR_Customer_ID__c</fullName>
    <label>Oracle AR Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>